# operational-transformation

./: CMakeLists.txt  LICENSE  README.md
src/: util.h
src/client/: client.cpp  client.h  document.cpp  document.h  server_peer.cpp  server_peer.h
src/core/: blocking_queue.h  chain.h  change.h  document.cpp  document.h  hash_counter.cpp  hash_counter.h  node.h  operation.cpp  operation.h  operation_transformation.cpp  symbol.cpp  symbol.h
src/server/: client_peer.cpp  client_peer.h  server.cpp  server.h
src/server/history/: jumping_history.cpp  jumping_history.h  operations_history.h  simple_history.cpp  simple_history.h
src/testing/: CMakeLists.txt  chain_tests.cpp  client_server_one_threaded_tests.cpp  client_server_simple_tests.cpp  client_server_tests_simple.cpp  document_tests.cpp  hash_counter_tests.cpp  magic_list.h  operation_tests.cpp  test_document.h  tests.h
src/testing/util/: magic_list.h  test_util.cpp  test_util.h
